# mpox-lesions

./: .gitignore  README.md  pyproject.toml
data/: loading.ipynb
mpox-lesions/: dataloader.py  model_loader.py  swin.py  train.py  train_utils.py  vnet.py
runs/swin_experiment/: events.out.tfevents.1738651790.Anand-GE66-RAIDER.15108.0  events.out.tfevents.1738652205.Anand-GE66-RAIDER.19279.0
