[tool.poetry]
name = "mpox-lesions"
version = "0.1.0"
description = "repository to document and research for a new SOTA on the mpox lesions v2 dataset"
authors = ["hauntedcupoftea <andydchauhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
tensorboard = "^2.18.0"
tqdm = "^4.67.1"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
